--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@ h1 {
   text-align: center;
 }
 
+.badge {
+  padding: 0 3px;
+  background-color: red;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-radius: 5px;
+  position: relative;
+  width: 0.7rem;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
